Se hizo un cambio de fondo principal y se aplicaron custom properties

--- a/index.html
+++ b/index.html
@@ -23,15 +23,20 @@
 
     <main>
         <div class="portada">
-            <img src="IMG/fondooo.webp" alt="Ilustración de moda" class="portada__img">
+            <img src="IMG/fondo3.webp" alt="Ilustración de moda" class="portada__img">
             <h1 class="portada__titulo">ES MOMENTO DE CAMBIAR TU CLOSET</h1>
-            <p class="portada__descripcion">Disfruta de nuestras increíbles promociones y luce como siempre lo soñaste Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore dignissimos earum, libero sit ea ipsa non error.</p>
+            <div class="portada__descripcion">
+                <p class="portada__descripcion-parrafo">Disfruta de nuestras increíbles promociones y luce como siempre lo soñaste Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore dignissimos earum, libero sit ea ipsa non error.</p>
+            </div>
+            
             <button class="boton portada__boton">Comprar</button>
         </div>
     </main>
 
 
-    <section>
+    <section class="section">
+
+        <!-- <h2 class="section__titulo">Todo lo que tenemos para ti y tu familia</h2> -->
 
         <div class="services">
             <img src="IMG/mujer.webp" alt="mujer" class="services__img">
