Se finalizo la pagina teniendo en cuenta los requerimientos y se agregaron comtarios

--- a/index.html
+++ b/index.html
@@ -23,84 +23,85 @@
 
     <main>
         <div class="portada">
-            <img src="IMG/fondo3.webp" alt="Ilustración de moda" class="portada__img">
-            <h1 class="portada__titulo">ES MOMENTO DE CAMBIAR TU CLOSET</h1>
-            <div class="portada__descripcion">
-                <p class="portada__descripcion-parrafo">Disfruta de nuestras increíbles promociones y luce como siempre lo soñaste Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore dignissimos earum, libero sit ea ipsa non error.</p>
-            </div>
+            <img class="portada__img" src="IMG/fondo3.webp" alt="Fondo" />
             
-            <button class="boton portada__boton">Comprar</button>
+            <div class="portada__contenido">
+                <h1 class="portada__titulo">ES MOMENTO DE CAMBIAR TU CLOSET</h1>
+                <p class="portada__descripcion-parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum distinctio minima, asperiores quisquam sint ducimus vitae. Id neque tempore eius exercitationem veniam, explicabo ipsum? Accusantium quas consectetur maiores incidunt autem in id? Quas, incidunt?</p>
+                <button class="portada__boton boton">Comprar</button>
+            </div>
         </div>
     </main>
 
 
-    <section class="section">
+    <section >
+        <div class="section__content">
+            <h2 class="section__titulo">Todo lo que tenemos para ti y tu familia</h2>
 
-        <!-- <h2 class="section__titulo">Todo lo que tenemos para ti y tu familia</h2> -->
+            <div class="section__grid">
+                <div class="services">
+                    <img src="IMG/mujer.webp" alt="mujer" class="services__img">
+                    <h2 class="services__title">Damas</h2>
+                    <span class="services__description">El paraíso femenino</span>
+                </div>
 
-        <div class="services">
-            <img src="IMG/mujer.webp" alt="mujer" class="services__img">
-            <h2 class="services__title">Damas</h2>
-            <span class="services__description">El paraíso femenino</span>
+                <div class="services">
+                    <img src="IMG/hombre.webp" alt="hombre" class="services__img">
+                    <h2 class="services__title">Caballeros</h2>
+                    <span class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt aliquam iste deserunt.</span>
+                </div>
+
+                <div class="services">
+                    <img src="IMG/niño.webp" alt="kids" class="services__img">
+                    <h2 class="services__title">Niños</h2>
+                    <span class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, totam aut!</span>
+                </div>
+
+                <div class="services">
+                    <img src="IMG/gorras.webp" alt="gorras" class="services__img">
+                    <h2 class="services__title">Gorras</h2>
+                    <span class="services__description">Lorem ipsum, dolor sit amet consectetur adipisicing.</span>
+                </div>
+
+                <div class="services">
+                    <img src="IMG/medias.webp" alt="medias" class="services__img">
+                    <h2 class="services__title">Medias</h2>
+                    <span class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                </div>
+
+                <div class="services">
+                    <img src="IMG/zapatos.webp" alt="zapatos" class="services__img">
+                    <h2 class="services__title">Zapatos</h2>
+                    <span class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                </div>
+            </div>
         </div>
-
-
-        <div class="services">
-           <img src="IMG/hombre.webp" alt="hombre" class="services__img"> 
-           <h1 class="services__title">Caballeros</h1>
-           <span class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt aliquam iste deserunt.</span>
-        </div>
-
-        <div class="services">
-           <img src="IMG/niño.webp" alt="kids" class="services__img"> 
-           <h1 class="services__title">Niños</h1>
-           <span class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, totam aut!</span>
-        </div>
-
-        <div class="services">
-           <img src="IMG/gorras.webp" alt="gorras" class="services__img"> 
-           <h1 class="services__title">Gorras</h1>
-           <span class="services__description">Lorem ipsum, dolor sit amet consectetur adipisicing.</span>
-        </div>
-
-        <div class="services">
-           <img src="IMG/medias.webp" alt=medias" class="services__img"> 
-           <h1 class="services__title">Medias</h1>
-           <span class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-        </div>
-
-        <div class="services">
-           <img src="IMG/zapatos.webp" alt="zapatos" class="services__img"> 
-           <h1 class="services__title">Zapatos</h1>
-           <span class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-        </div>
-
     </section>
 
-    <section>
-        
-        <div class="testimonials">
+    <section class="section__destacada">
+
+        <div class="testimonios__contenedor">
+            <div class="testimonials">
             <img src="IMG/cara1.jpg" alt="perfil de cliente" class="testimonials__img">
             <span class="testimonials__name">Nombre</span>
-            <p class="testimonials__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis autem ad laboriosam ipsa odit, possimus qui cumque.</p>
-        </div>
+            <p class="testimonials__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
 
-        <div class="testimonials">
+            <div class="testimonials">
             <img src="IMG/cara2.jpg" alt="perfil de cliente" class="testimonials__img">
             <span class="testimonials__name">Nombre</span>
-            <p class="testimonials__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis obcaecati, sapiente non, magni magnam animi illo earum excepturi, ad possimus suscipit ratione eos!</p>
-        </div>
+            <p class="testimonials__text">Veritatis obcaecati, sapiente non, magni magnam animi illo earum.</p>
+            </div>
 
-        <div class="testimonials">
+            <div class="testimonials">
             <img src="IMG/perfil3.webp" alt="perfil de cliente" class="testimonials__img">
             <span class="testimonials__name">Nombre</span>
-            <p class="testimonials__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis obcaecati, sapiente non, magni magnam animi illo earum excepturi, ad possimus suscipit ratione eos!</p>
+            <p class="testimonials__text">Excepturi, ad possimus suscipit ratione eos!</p>
+            </div>
         </div>
-    </section>
 
-
-    <aside>
-        <form class="formulario">
+        <aside class="formulario__contenedor">
+            <form class="formulario">
             <label for="nombre" class="formulario__label">Nombre:</label>
             <input type="text" id="nombre" class="formulario__input">
 
@@ -111,8 +112,11 @@
             <textarea id="mensaje" class="formulario__input formulario__textarea"></textarea>
 
             <button type="submit" class="boton formulario__button">Enviar</button>
-        </form>
-    </aside>
+            </form>
+        </aside>
+
+    </section>
+
 
 
     <footer class="footer">
